# cha-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
crates/alacritty_terminal/: Cargo.toml
crates/alacritty_terminal/src/: event.rs
crates/alacritty_terminal/src/term/: mod.rs
crates/alacritty_terminal/src/tty/: mod.rs  unix.rs
crates/chatui-markdown/: Cargo.toml
crates/chatui-markdown/src/: code_block.rs  lib.rs  parse.rs  tests.rs  view.rs
crates/chatui-markdown/src/snapshots/: chatui_markdown__tests__offset_0.snap  chatui_markdown__tests__offset_1.snap  chatui_markdown__tests__offset_2.snap  chatui_markdown__tests__offset_3.snap  chatui_markdown__tests__offset_4.snap  chatui_markdown__tests__offset_5.snap  chatui_markdown__tests__offset_6.snap  chatui_markdown__tests__offset_7.snap  chatui_markdown__tests__offset_8.snap  chatui_markdown__tests__render_code_block.snap  chatui_markdown__tests__render_heading.snap  chatui_markdown__tests__render_list.snap  chatui_markdown__tests__render_paragraph.snap  chatui_markdown__tests__render_quote.snap  chatui_markdown__tests__render_rule.snap  chatui_markdown__tests__render_table.snap
crates/dir_browser/: Cargo.toml
crates/dir_browser/src/: main.rs
crates/fuztea/: Cargo.toml
crates/fuztea/src/: lib.rs  main.rs
crates/git_status/: Cargo.toml
crates/git_status/src/: diff_render.rs  git.rs  highlight.rs  main.rs  shortcuts.rs
crates/kaeru/: Cargo.toml
crates/kaeru/src/: main.rs  session_store.rs
crates/kaeru/src/snapshots/: kaeru__tests__render_command_buttons.snap  kaeru__tests__render_command_picker.snap  kaeru__tests__render_initial_state.snap  kaeru__tests__render_input_multiline.snap  kaeru__tests__render_markdown_message.snap  kaeru__tests__render_mode_and_model_buttons.snap  kaeru__tests__render_mode_picker.snap  kaeru__tests__render_model_picker.snap  kaeru__tests__render_session_loader.snap
crates/markdown/: Cargo.toml
crates/markdown/src/: main.rs
crates/syntax-highlight/: Cargo.toml
crates/syntax-highlight/src/: highlight.rs  lib.rs  markdown.rs
crates/term/: Cargo.toml
crates/term/src/: app.rs  cli.rs  divider.rs  filter.rs  focus.rs  keymap.rs  layout.rs  main.rs  modal.rs  persistence.rs  project.rs  remote.rs  session.rs  sidebar.rs  status.rs  term_io.rs  vcs.rs
crates/text_editor/: Cargo.toml
crates/text_editor/src/: main.rs
crates/todo/: Cargo.toml
crates/todo/src/: main.rs
crates/vte/: rustfmt.toml
crates/vte/src/: ansi.rs
src/: buffer.rs  error.rs  event.rs  geometry.rs  hash.rs  lib.rs  main.rs  oklab.rs  palette.rs  program.rs  render.rs  scroll.rs  test_utils.rs
src/components/: data_table.rs  input.rs  mod.rs  paragraph.rs  process.rs  scroll.rs  terminal.rs  tree.rs  virtual_list.rs  virtualized_column.rs
src/components/scroll/: tests.rs
src/dom/: mod.rs  patch.rs  print.rs  rounding.rs  table.rs
