[package]
name = "chatui"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
alacritty_terminal = { path = "crates/alacritty_terminal", version = "0.25.1" }
agent-client-protocol = "0.9.0"
async-trait = "0.1"
color-eyre = "0.6.5"
directories = "5.0.1"
facet = "0.40.0"
facet-args = "0.40.0"
libc = "0.2"
miette = { version = "7", features = ["fancy"] }
once_cell = "1.19"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = { version = "2.5", default-features = false, features = ["text", "inline"] }
smallvec = "1.13"
smol = "2"
taffy = "0.9.1"
termina = { version = "0.1.1", features = ["event-stream"] }
termwiz = { version = "0.23.3", default-features = false, features = [] }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-house = { version = "0.3" }
vte = { path = "crates/vte", version = "0.15.0" }
zed-sum-tree = "0.2.0"

[dev-dependencies]
tempfile = "3.10"

[patch.crates-io]
alacritty_terminal = { path = "crates/alacritty_terminal" }
vte = { path = "crates/vte" }
