[package]
name = "chatui"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
alacritty_terminal = { path = "crates/alacritty_terminal", version = "0.25.1" }
libc = "0.2"
once_cell = "1.19"
ropey = "1.6"
smallvec = "1.13"
smol = "2"
taffy = "0.9.1"
termina = { version = "0.1.1", features = ["event-stream"] }
tracing = "0.1"
unicode-width = "0.1.11"
vte = { path = "crates/vte", version = "0.15.0" }
zed-sum-tree = "0.2.0"

[patch.crates-io]
alacritty_terminal = { path = "crates/alacritty_terminal" }
vte = { path = "crates/vte" }
