[package]
name = "git_status"
version = "0.1.0"
edition = "2024"

[dependencies]
chatui = { path = "../.." }
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main", package = "facet-args" }
miette = { version = "7", features = ["fancy"] }
once_cell = "1.19"
ropey = "1.6"
similar = { version = "2.5", default-features = false, features = ["text", "inline"] }
smol = "2"
taffy = "0.9.1"
termwiz = { version = "0.23.3", default-features = false, features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-house = { version = "0.3" }
