[package]
name = "git_status"
version = "0.1.0"
edition = "2024"

[dependencies]
chatui = { path = "../.." }
fuztea = { path = "../fuztea" }
facet = "0.40.0"
facet-args = "0.40.0"
miette = { version = "7", features = ["fancy"] }
once_cell = "1.19"
ropey = "1.6"
similar = { version = "2.5", default-features = false, features = ["text", "inline"] }
smol = "2"
taffy = "0.9.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-house = { version = "0.3" }
unicode-width = "0.1.11"
