[package]
name = "kaeru"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9.0"
async-trait = "0.1"
chatui = { path = "../.." }
miette = { version = "7", features = ["fancy"] }
smol = "2"
taffy = "0.9.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
