[package]
name = "kaeru"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = { version = "0.9.0", features = ["unstable"] }
async-trait = "0.1"
chatui = { path = "../.." }
chatui-markdown = { path = "../chatui-markdown" }
directories = "5.0.1"
fuztea = { path = "../fuztea" }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "2"
taffy = "0.9.1"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "local-offset"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
insta = "1.46.0"
piper = "0.2"
