[package]
name = "term"
version = "0.1.0"
edition = "2024"

[dependencies]
chatui = { path = "../.." }
color-eyre = "0.6.5"
directories = "5.0.1"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "2"
taffy = "0.9.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
