[package]
name = "term"
version = "0.1.0"
edition = "2024"

[dependencies]
chatui = { path = "../.." }
directories = "5.0.1"
facet = "0.40.0"
facet-args = "0.40.0"
facet-json = "0.40.0"
miette = { version = "7", features = ["fancy"] }
once_cell = "1.19"
smol = "2"
taffy = "0.9.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
fuztea = { path = "../fuztea" }
