[package]
name = "text_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
chatui = { path = "../.." }
color-eyre = "0.6"
ropey = "1"
syntax-highlight = { path = "../syntax-highlight" }
taffy = "0.9.1"
time = { version = "0.3", features = ["formatting"] }
tree-house = "0.3"

[dev-dependencies]
tempfile = "3.10"
